// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvCertificatesApi createCertificate() 1: Create new certificate (inactive) - success 1`] = `
{
  "active": false,
  "expireTime": "2025-08-01T22:01:54Z",
  "id": "ccrt-0962398c-56d6-459c-be16-b11c30f00d47",
  "issuer": "CN=frodo-dev4.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "live": false,
  "subject": "CN=frodo-dev4.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "subjectAlternativeNames": null,
  "validFromTime": "2024-08-01T22:01:54Z",
}
`;

exports[`EnvCertificatesApi createCertificate() 2: Create new certificate (active) - success 1`] = `
{
  "active": true,
  "expireTime": "2025-08-01T22:01:54Z",
  "id": "ccrt-fe047a14-7681-4c31-8835-4addd7300112",
  "issuer": "CN=frodo-dev5.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "live": false,
  "subject": "CN=frodo-dev5.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "subjectAlternativeNames": null,
  "validFromTime": "2024-08-01T22:01:54Z",
}
`;

exports[`EnvCertificatesApi deleteCertificate() 1: Delete existing certificate - success 1`] = `""`;

exports[`EnvCertificatesApi deleteCertificate() 2: Delete non-existing certificate - success 1`] = `""`;

exports[`EnvCertificatesApi getCertificate() 1: Get existing certificate - success 1`] = `
{
  "active": false,
  "expireTime": "2025-08-01T22:01:54Z",
  "id": "ccrt-663eca03-10c3-4ad2-96b8-6ab83c4aea2d",
  "issuer": "CN=frodo-dev1.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "live": false,
  "subject": "CN=frodo-dev1.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "subjectAlternativeNames": null,
  "validFromTime": "2024-08-01T22:01:54Z",
}
`;

exports[`EnvCertificatesApi getCertificate() 2: Get non-existing certificate - error 1`] = `""`;

exports[`EnvCertificatesApi getCertificates() 1: Get all certificates - success 1`] = `
[
  {
    "active": false,
    "expireTime": "2025-08-01T22:01:54Z",
    "id": "ccrt-47fe3bf4-f788-4f9c-a7e4-ecdf710eb20d",
    "issuer": "CN=frodo-dev2.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
    "live": false,
    "subject": "CN=frodo-dev2.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
    "subjectAlternativeNames": null,
    "validFromTime": "2024-08-01T22:01:54Z",
  },
  {
    "active": false,
    "expireTime": "2025-08-01T22:01:54Z",
    "id": "ccrt-663eca03-10c3-4ad2-96b8-6ab83c4aea2d",
    "issuer": "CN=frodo-dev1.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
    "live": false,
    "subject": "CN=frodo-dev1.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
    "subjectAlternativeNames": null,
    "validFromTime": "2024-08-01T22:01:54Z",
  },
  {
    "active": false,
    "expireTime": "2025-08-01T22:01:54Z",
    "id": "ccrt-e04aa493-b822-4765-8cb2-0e45d32a91d8",
    "issuer": "CN=frodo-dev3.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
    "live": false,
    "subject": "CN=frodo-dev3.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
    "subjectAlternativeNames": null,
    "validFromTime": "2024-08-01T22:01:54Z",
  },
]
`;

exports[`EnvCertificatesApi updateCertificate() 1: Activate existing certificate - success 1`] = `
{
  "active": true,
  "expireTime": "2025-08-01T22:01:54Z",
  "id": "ccrt-47fe3bf4-f788-4f9c-a7e4-ecdf710eb20d",
  "issuer": "CN=frodo-dev2.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "live": false,
  "subject": "CN=frodo-dev2.mytestrun.com,OU=Frodo Library,O=Rockcarver,L=Georgetown,ST=Texas,C=US",
  "subjectAlternativeNames": null,
  "validFromTime": "2024-08-01T22:01:54Z",
}
`;

exports[`EnvCertificatesApi updateCertificate() 2: Activate non-existing certificate - error 1`] = `""`;
